# cc-cmake-template

./: .gitignore  CMakeLists.txt
cmake/: git.cmake
src/: gconfig.h.in  main.cc
src/common/: CMakeLists.txt  logger.cc
src/dyn-common/: CMakeLists.txt  dyn_logger.h  logger.cc
